--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quantum Nigga Token - $QUANTUMNGA</title>
-  <link rel="stylesheet" href="niggahome.css">
-  <link rel="stylesheet" href="overview.css">
+  <link rel="stylesheet" href="niggahome.css?v1.1">
+  <link rel="stylesheet" href="overview.css?v1.1">
+
 </head>
 <body>
   <div id="home" class="Section">
@@ -210,6 +211,6 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="script.js?v1.1"></script>
 </body>
 </html>
