--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quantum Nigga Token - $QUANTUMNGA</title>
+  <title>Quantum Nigga Token / Quantum Nygga Token - $QUANTUMNGA</title>
+  <meta name="description" content="Quantum Nigga ($QUANTUMNGA) / Quantum Nygga - Revolutionary token that everyone just needs. This is the future.">
   <link rel="stylesheet" href="niggahome.css">
   <link rel="stylesheet" href="overview.css">
 </head>
