--- a/index.html
+++ b/index.html
@@ -3,18 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quantum Nigga Token - $QUANTUMNGA</title>
+  <title>Quantum Nigga Token - $QTNGA</title>
   <link rel="stylesheet" href="niggahome.css?v1.1">
   <link rel="stylesheet" href="overview.css?v1.1">
+  <link rel="icon" type="image/png" href="imgs/qnigga.png">
+
+  <meta name="description" content="Quantum Nigga Token ($QTNGA) - Launching January 5, 2025. The future of decentralized finance with Quantum Fentreactor™ technology.">
+  <meta name="keywords" content="QUANTUMNGA, crypto, token, blockchain, solana, Quantum Nigga, Quantum Nygga, Quantum Nigga token, Quantum nygga token, qtnga">
+  <meta property="og:title" content="Quantum Nigga Token - $QTNGA">
+  <meta property="og:description" content="The future of DeFi launching January 5, 2025">
+  <meta property="og:image" content="imgs/qnigga.png">
 
 </head>
 <body>
   <div id="home" class="Section">
     <img class="BackgroundImage" src="imgs/nigga_1920x1080.webp" alt="background">
-    <div class="LeftSide">
+    <div class="LeftSide">  
       <div class="MainLabelBox">
         <div class="MainLabel">Quantum Nigga Token</div>
-        <div class="TokenTag">$QUANTUMNGA</div>
+        <div class="TokenTag">$QTNGA</div>
       </div>
       
       <div class="ContentBox">
@@ -86,7 +93,7 @@
           <span class="BuyText">Buy</span>
           <div class="IconTextGroup">
             <img class="TokenIcon" src="imgs/qnigga.png" alt="QNIGGA" style="height: 24px; width: auto;">
-            <span>$QNIGGA on Pump Fun</span>
+            <span>$QTNGA on Pump Fun</span>
           </div>
         </div>
 
