--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quantum Nigga Token - $QTNGA</title>
-  <link rel="stylesheet" href="niggahome.css?v1.2">
-  <link rel="stylesheet" href="overview.css?v1.2">
+  <link rel="stylesheet" href="niggahome.css?v1.1">
+  <link rel="stylesheet" href="overview.css?v1.1">
   <link rel="icon" type="image/png" href="imgs/qnigga.png">
 
   <meta name="description" content="Quantum Nigga Token ($QTNGA) - Launching January 5, 2025. The future of decentralized finance with Quantum Fentreactor™ technology.">
@@ -28,7 +28,7 @@
         <nav class="NavigationBar">
           <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#overview">Overview</a></li>
+            <li><a href="#overview">Tokenomics</a></li>
             <li><a href="#" id="buyLink">Buy</a></li>
           </ul>
           <div class="IconContainer">
@@ -106,118 +106,73 @@
 
   <div id="overview" class="Section">
     <div class="TechnologySection">
-      <div class="TechGrid">
-        <div class="TechBox">
-          <div class="TechHeader">
-            <span class="StatusIndicator"></span>
-            Quantum Fentreactor™ 3.0
+      <h2 class="SectionTitle">Tokenomics & Security</h2>
+      <div class="TokenGrid">
+        
+        <div class="TokenBox">
+          <div class="BoxHeader">
+            <svg class="BoxIcon" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm-1-13h2v6h-2zm0 8h2v2h-2z"/></svg>
+            <div class="BoxTitle">Fair Launch</div>
           </div>
-          <div class="TechDescription">
-            On BD this reactor stay turnt with that quantum sauce. 
-            Real street certified, no fugazi. Got the whole blockchain 
-            hot like O'Block summer, 35 000% more heat than them goofy tokens.
+          <div class="BoxContent">
+            100% fair launch with no private sale, no presale, and max 1.5% team tokens. Everyone gets equal opportunity at launch.
           </div>
-          <div class="TechStatus">
-            STATUS: <span class="StatusValue">Armed</span>
-            <br>
-            ENERGY: <span class="StatusValue">Powered by Fentanyl</span>
-          </div>
-          <div class="TechMetrics">
-            <div class="Metric">
-              <div class="MetricValue">99.9%</div>
-              <div class="MetricLabel">UPTIME</div>
-            </div>
-            <div class="Metric">
-              <div class="MetricValue">3.9x</div>
-              <div class="MetricLabel">FENT EFFICIENCY</div>
-            </div>
-          </div>
-        </div>
-  
-        <div class="TechBox">
-          <div class="TechHeader">
-            <span class="StatusIndicator"></span>
-            Broke Nigga Detection System™
-          </div>
-          <div class="TechDescription">
-            On folks nem grave, this system steady peepin them wallets no cap. 
-            If you ain't got that bread up, you getting caught lackin, 
-            straight out the trap.
-          </div>
-          <div class="TechStatus">
-            STATUS: <span class="StatusValue">Armed</span>
-            <br>
-            DETECTION: <span class="StatusValue">Ultra Fast</span>
-          </div>
-          <div class="TechMetrics">
+          <div class="BoxMetrics">
             <div class="Metric">
               <div class="MetricValue">100%</div>
-              <div class="MetricLabel">FAKENESS DETECTOR</div>
+              <div class="MetricLabel">Public Launch</div>
             </div>
             <div class="Metric">
               <div class="MetricValue">0%</div>
-              <div class="MetricLabel">CAP RATE</div>
+              <div class="MetricLabel">Presale</div>
             </div>
           </div>
         </div>
   
-        <div class="TechBox">
-          <div class="TechHeader">
-            <span class="StatusIndicator"></span>
-            YN Scanner Radar™
+        <div class="TokenBox">
+          <div class="BoxHeader">
+            <svg class="BoxIcon" viewBox="0 0 24 24"><path fill="currentColor" d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 10.99h7c-.53 4.12-3.28 7.79-7 8.94V12H5V6.3l7-3.11v8.8z"/></svg>
+            <div class="BoxTitle">Security</div>
           </div>
-          <div class="TechDescription">
-            On King Von, this scanner ain't never been cap. 
-            Spotting real ones from the trenches worldwide with that 
-            AI vision, stayed locked in like O'Block.
+          <div class="BoxContent">
+            Contract fully audited and renounced. Liquidity will be locked forever. Maximum security guaranteed.
           </div>
-          <div class="TechStatus">
-            STATUS: <span class="StatusValue">Armed</span>
-            <br>
-            RANGE: <span class="StatusValue">Worldwide + O'Block</span>
-          </div>
-          <div class="TechMetrics">
-            <div class="Metric">
-              <div class="MetricValue">24/7</div>
-              <div class="MetricLabel">STAY WOKE</div>
-            </div>
-            <div class="Metric">
-              <div class="MetricValue">∞</div>
-              <div class="MetricLabel">VISION RANGE</div>
-            </div>
-          </div>
-        </div>
-  
-        <div class="TechBox">
-          <div class="TechHeader">
-            <span class="StatusIndicator"></span>
-            Anti-Opp Protection™
-          </div>
-          <div class="TechDescription">
-            Real fams only, absolutely no opps allowed. 
-            System stay on point like Von, catching them shorts 
-            before they can even think bout that making that move.
-          </div>
-          <div class="TechStatus">
-            STATUS: <span class="StatusValue">Armed & Dangerous</span>
-            <br>
-            THREAT: <span class="StatusValue">No Threat For Now</span>
-          </div>
-          <div class="TechMetrics">
-            <div class="Metric">
-              <div class="MetricValue">0</div>
-              <div class="MetricLabel">OPP SUCCESS</div>
-            </div>
+          <div class="BoxMetrics">
             <div class="Metric">
               <div class="MetricValue">100%</div>
-              <div class="MetricLabel">OPP ELIMINATION</div>
+              <div class="MetricLabel">Locked</div>
+            </div>
+            <div class="Metric">
+              <div class="MetricValue">0%</div>
+              <div class="MetricLabel">Risk</div>
             </div>
           </div>
         </div>
+  
+        <div class="TokenBox">
+          <div class="BoxHeader">
+            <svg class="BoxIcon" viewBox="0 0 24 24"><path fill="currentColor" d="M12 7V3H2v18h20V7H12zM6 19H4v-2h2v2zm0-4H4v-2h2v2zm0-4H4V9h2v2zm0-4H4V5h2v2zm4 12H8v-2h2v2zm0-4H8v-2h2v2zm0-4H8V9h2v2zm0-4H8V5h2v2zm10 12h-8v-2h2v-2h-2v-2h2v-2h-2V9h8v10zm-2-8h-2v2h2v-2zm0 4h-2v2h2v-2z"/></svg>
+            <div class="BoxTitle">Distribution</div>
+          </div>
+          <div class="BoxContent">
+            Maximum team allocation of 1.5%. No hidden wallets. Full transparency with locked liquidity pool.
+          </div>
+          <div class="BoxMetrics">
+            <div class="Metric">
+              <div class="MetricValue">1.5%</div>
+              <div class="MetricLabel">Team Max</div>
+            </div>
+            <div class="Metric">
+              <div class="MetricValue">98.5%</div>
+              <div class="MetricLabel">Community</div>
+            </div>
+          </div>
+        </div>
+  
       </div>
     </div>
   </div>
 
-  <script src="script.js?v1.2"></script>
+  <script src="script.js?v1.1"></script>
 </body>
 </html>
